tests/rosetta/transpiler/erl/conways-game-of-life.error
exit status 127
escript: exception error: bad map: 
                 [[false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false|...],
                  [false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false,false,false,
                   false,false,false,false,false,false,false|...]]
  in function  main:setcell/4 
  in call from main:'-newlife/2-Fun_7_loop/4-0-'/4 (/workspace/mochi/tests/rosetta/transpiler/erl/conways-game-of-life.erl, line 143)
  in call from main:newlife/2 (/workspace/mochi/tests/rosetta/transpiler/erl/conways-game-of-life.erl, line 149)
  in call from main:main/0 (/workspace/mochi/tests/rosetta/transpiler/erl/conways-game-of-life.erl, line 217)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/conways-game-of-life.erl, line 238)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
